충돌제발일어나라

--- a/정훈이꺼/comment.html
+++ b/정훈이꺼/comment.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="comment.css">
     <title>문서</title>
+    <script src="./comment.js"></script>
 </head>
 
 <body>
@@ -40,6 +41,7 @@
     </div>
 
     <script>
+        let a=0;
         // 아이디, 비번 alert 확인창
         function 알림창열닫(파라미터) {
             document.getElementById('alert').style.display = 파라미터;
